# BA-Accelerator

./: .gitignore  README.md
backend/: .env.example  __init__.py  config.py  main.py  requirements.txt
framework/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
framework/api/: main.py
framework/api/routers/: dynamic_router.py
framework/designlab_core/: __init__.py
framework/designlab_core/api/: __init__.py  factory.py
framework/designlab_core/evaluation/: __init__.py  validator.py
framework/designlab_core/llm/: __init__.py  client.py  exceptions.py
framework/designlab_core/prompts/: __init__.py  base_template.md  loader.py
framework/designlab_core/prompts/architecture/: ARC-001-system-architecture.md  __init__.py
framework/designlab_core/prompts/backend/: BE-001-api-endpoint-generation.md  __init__.py
framework/designlab_core/prompts/requirements/: REQ-001-story-generation.md  REQ-002-nfr-generation.md  __init__.py
framework/designlab_core/prompts/testing/: TEST-001-unit-test-generation.md  __init__.py
framework/designlab_core/prompts/ui/: UI-001-react-page-generation.md  __init__.py
framework/designlab_core/schemas/: __init__.py  architecture.py  backend.py  base_schema.py  story.py  testing.py  ui.py
framework/designlab_core/services/: __init__.py  generation_pipeline.py
framework/designlab_core/utilities/: __init__.py  config.py  env.py  logger.py
framework/docs/: ADDING_NEW_ACCELERATORS.md  API_REFERENCE.md  ARCHITECTURE.md
framework/tests/: test_llm_client.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+120 files in other folders)
